--- a/abstract.tex
+++ b/abstract.tex
@@ -4,7 +4,7 @@ Cross-lingual representations of words enable us to explore the distribution pro
 %The performance of the cross-lingual embedding is measuared on an open dictionary from Facebook, we find the performance is comparable with the state-of-the-art supervised and unsupervised methods. Based on that, our simple yet efficient unsupervised machine translation system can produce meaningful machine translation the BLEU scores even get beyond some unsupervised system with costly iterative training. \\
 %We also make some ablation studies, analyze the effects of various factors in the cross-lingual word embedding training and various artificial noise. We think our work can provide better understanding of the training and the applications of word embedding in machine translation (MT).
 In this thesis, I propose a novel training method of cross-lingual word embedding, which is distinct from other methods by  its corpus-based instead of vocabulary-based training process. It integrates embedding mapping learning, lexicon induction and corpus translation. 
-Language model (LM) is exploited make better use of contextual information to improve the corpus translation.  The improvement of lexicon aids correspondingly cross-lingual word embedding. The performance of novel corpus-based approach is measured on a word retrieval. The experiments show that our method can achieve competitive results compared with the current supervised and unsupervised learning methods. \\
+Language model is exploited make better use of contextual information to improve the corpus translation.  The improvement of lexicon aids correspondingly cross-lingual word embedding. The performance of novel corpus-based approach is measured on a word retrieval. The experiments show that our method can achieve competitive results compared with the current supervised and unsupervised learning methods. \\
 We further improve the unsupervised translation system with denoising neural network to handle reordering. The simple yet efficient translation system surpasses state-of-the-art unsupervised translation system without costly iteratively training.\\
 We verify the cross-lingual embedding on subword units performs poorly in translation and show that vocabulary cut-off helps for sentence translation. We also analyze the effect of different artificial noises to denoising model and propose a novel noise type.
 
