--- a/unsupervisedlearning.tex
+++ b/unsupervisedlearning.tex
@@ -52,14 +52,13 @@ The adversarial training was for cross-lingual embedding mapping is first propos
 Let ${=\{ \bm{f}_1, \cdots, \bm{f}_{{\lvert \tilde{V} \rvert}}\}}$ and ${ = \{ \bm{e}_1, \cdots , \bm{e}_{{\lvert \tilde{V} \rvert}}\}}$ be the most ${\lvert \tilde{V} \rvert}$ frequent word embeddings from source and target languages respectively. We refer the discriminator parameters as ${\theta_D}$.The discriminator is a multi-layer neural network trained to discriminate the transformed source word embedding from the target word embedding, while the mapping $W$, as simple as a linear transformation, is trained to fooling discriminator. In the two-player game, mapping from source embedding space to the target space is supposed to be learned.\\
 
 Generator loss 
-\[ \mathcal{L_G}(W|\theta_D) =  -\frac{1}{{\lvert \tilde{V} \rvert}} \sum_{n=1}^{\tilde{V}}\log P_{\theta_D}(source=0|W \bm{f}_n) - \frac{1}{\tilde{V}} \sum_{n=1}^{{\lvert \tilde{V} \rvert}} \log P_{\theta_D}(source = 1 | \bm{e}_n) \]
+\[ \mathcal{L_G}(W|\theta_D) =  -\frac{1}{{\lvert \tilde{V} \rvert}} \sum_{n=1}^{\tilde{V}}\log P_{\theta_D}(source=0|W \bm{f}_n) - \frac{1}{{\lvert \tilde{V} \rvert}} \sum_{n=1}^{{\lvert \tilde{V} \rvert}} \log P_{\theta_D}(source = 1 | \bm{e}_n) \]
 Discriminator loss
 \[ \mathcal{L_D}(\theta_D | W) =  -\frac{1}{{\lvert \tilde{V} \rvert}} \sum_{n=1}^{{\lvert \tilde{V} \rvert}} \log P_{\theta_D}(source = 1| W\bm{f}_n) - \frac{1}{{\lvert \tilde{V} \rvert}} \sum_{n=1}^{{\lvert \tilde{V} \rvert}} \log P_{\theta_D}(source=0| \bm{e}_n) \]	 
 \section{Corpus-based Learning}
 \subsection{Motivation}
-The vocabulary-based training approach makes good use of the  embedding distribution similarity. However, it just looks at the mutual nearest neighbors, not considering polysemy of the words.  It does not take the semantic or contextual information into consideration when training the cross-lingual mapping, which would be a flaw especially in machine translation task. We also argue that word frequency should also be considered when training. For example, though words are synonyms, some of them are more used than others. When inducing the lexicon, we should assign priority to frequent words.\\
-In if we translate corpus, we can consider those various translations to make the mapping better 
-The intuition of corpus-based approach is that, if we integrate the translation task into the cross-lingual mapping learning process, the factors mentioned above will be taken into account; with information provided from LM, different translation candidates will be chosen. Also  LM prefers the common words. 
+The vocabulary-based training approach makes good use of the  embedding distribution similarity. However, it just looks at the mutual nearest neighbors, not considering polysemy of the words. And it does not take the semantic or contextual information into consideration when training the cross-lingual mapping, which would be a flaw especially in machine translation task. We argue that word frequency should also be considered when training. For example, though words are synonyms, some of them are more often used than others. When inducing the lexicon, we should assign priority to frequent words.\\
+The intuition of corpus-based approach is that, if we integrate the translation task into the cross-lingual mapping learning process, the factors mentioned above will be taken into account; with information provided from LM, better translation candidates will be chosen. Also  LM prefers the common words. 
 \subsection{Framework}
  We propose a novel corpus-based learning approach by integrating corpus translation task. We build a word-based machine translation, in this thesis simplified as a word-by-word translation system, which exploits dictionary induction as lexical model. The intuition is that if the translation system gets improved better translation, we can further learn a better mapping based on the word translation pairs. LM is used to improve the translation. In the closed-loop learning process by alternating corpus translation and embedding mapping learning, we are hopefully learn good mapping matrix at last. Algorithm 3 summarize such iterative framework I propose. We use neural network with only one layer to represent the mapping matrix $W$, train successively with stochastic gradient updates to minimize the distance measurement.\\
 \begin{figure}[H]
@@ -145,7 +144,7 @@ We start with a pre-processing that normalize the embeddings, mean the centers o
 	As mentioned previously, the orthogonal preserves the quality of monolingual embeddings also dot product of vectors and  $l_2$ distance. In our experiments, we find the orthogonal constraint make training procedure converge successfully. In this thesis, the orthogonal constraint is added during the training process; we use projected gradient descent to train the neural network by alternating the training and the orthogonal constraining:
 \[ W \leftarrow (1+\beta) W - \beta(WW^\top)W\] 
 	where $\beta$ = 0.01  is usually found to perform well.  This method ensures that the matrix stays close to the manifold of orthogonal matrices after each update. 	
-	\item Learning Rate Scheduling\\
+	\item Learning Rate (lr) Scheduling\\
 	Two different learning rate schedulers are used in this thesis. Once we get the batch sentence translation, we can either train the mapping with the learning rate inherited from last training, or train always with the initial learning rate and keep training and updating learning rate until the learning rate drops to a minimal learning rate we predefined. The first training scheduler fits the normal online algorithm principle best but in practice we find the second scheduler trains the cross-lingual embedding more efficiently.
 	\item Stop Criterion\\
 	Once the results of this approach have converged to a good point, we can break the training loop early. We have considered  different factors such as the loss in the embedding training process or statistics on the translation. In practice, we find the model selection methods provided by \cite{conneau2017word} more suitable in our case. They use CSLS retrieval to generate the translations of 10k most frequent source words. And then compute the average cosine similarity between these deemed translations and use this average as validation metric. Empirically, they find that this simple criterion is better correlated with the performance on the evaluation tasks than those distance based criterion.
